--- a/ISCAsgn1/ques1a.html
+++ b/ISCAsgn1/ques1a.html
@@ -155,7 +155,7 @@
 
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgSUi4aKRQSyE9k69vVgcoqi5wzXt010E&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=<INSERT KEY>&callback=initMap"
     async defer></script>
   </body>
 </html>
